<resources>
    <string name="app_name">OpenDay</string>
    <string name="So_do"> Sơ đồ</string>
    <string name="Su_kien"> Sự kiện</string>
    <string name="Nganh"> Ngành</string>
    <string name="Khoa"> Khoa</string>
    <string name="nav_open">Mở</string>
    <string name="nav_close">Đóng</string>
    <string name="nav_header_title">Thái Bình Dương</string>
    <string name="nav_header_subtitle">tbd.edu.vn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="Giang_duong">TÒA NHÀ HÀNH CHÍNH VÀ GIẢNG ĐƯỜNG</string>
    <string name="Ky_tuc_xa"> KÝ TÚC XÁ</string>
    <string name="Thuc_hanh"> TÒA NHÀ ĐA NĂNG</string>
    <string name="khoa01"> Khoa \n Công nghệ thông tin</string>
    <string name="khoa02"> Khoa \n Ngôn ngữ, Du lịch \n Và Văn hóa</string>
    <string name="khoa03"> Khoa Kinh tế và Luật</string>
    <string name="nganh0">NGÀNH LUẬT</string>
    <string name="nganh1">NGÀNH ĐÔNG PHƯƠNG HỌC </string>
    <string name="nganh2">NGÀNH DU LỊCH </string>
    <string name="nganh3">NGÀNH CÔNG NGHỆ THÔNG TIN</string>
    <string name="nganh4">NGÀNH NGÔN NGỮ ANH </string>
    <string name="nganh5">NGÀNH KẾ TOÁN </string>
    <string name="nganh6">NGÀNH TÀI CHÍNH NGÂN HÀNG </string>
    <string name="nganh7">NGÀNH QUẢN TRỊ KINH DOANH </string>
    <string name="sukien0"> Thông báo về việc Sinh viên không đến trường tránh dịch bênh Covid-19</string>
    <string name="sukien1"> Giảng viên Hàn Quốc cộng tác với ngành Đông phương học</string>
    <string name="sukien2"> Đại học Thái Bình Dương cho sinh viên nghỉ đến 16.2.2020</string>
    <string name="sukien3"> Tập huấn chuyên đề truyền thông</string>
    <string name="ds_khoa">DANH SÁCH CÁC KHOA </string>
    <string name="ds_nganh">DANH SÁCH CÁC NGÀNH</string>
    <string name="k_cntt5">
    </string>
    <string name="k_cntt3">Khoa có chức năng quản lý toàn diện công tác đào tạo, nghiên cứu khoa học; phối hợp các đơn vị chức năng làm công tác phát triển và bồi dưỡng đội ngũ cán bộ chuyên môn để phục vụ chiến lược đào tạo các ngành của khoa và các ngành khác có liên quan.\n
        Khoa là đơn vị trực tiếp quản lý các bộ môn và công tác sinh viên</string>
    <string name="k_cntt1">CHỨC NĂNG, NHIỆM VỤ KHOA DU LỊCH VÀ QUẢN TRỊ KINH DOANH</string>
    <string name="chucnang">A. CHỨC NĂNG</string>
    <string name="nhiemvu">B. NHIỆM VỤ:</string>
    <string name="k_nndlvh1">CHỨC NĂNG, NHIỆM VỤ KHOA NGÔN NGỮ \n DU LỊCH VÀ VĂN HÓA</string>
    <string name="k_ktl1">CHỨC NĂNG, NHIỆM VỤ KHOA KINH TẾ VÀ LUẬT</string>
    <string name="ma_nganh_luat">Mã ngành: 7380101</string>
    <string name="ma_nganh_dong_phuong_hoc">Mã ngành: 7310608</string>
    <string name="ma_nganh_du_lich">Mã ngành: 7810101</string>
    <string name="ma_nganh_cntt">Mã ngành: 7480201</string>
    <string name="ma_nganh_ngon_ngu_anh">Mã ngành: 7220201</string>
    <string name="ma_nganh_ke_toan">Mã ngành: 7340301</string>
    <string name="ma_nganh_tc_nn">Mã ngành: 7340201</string>
    <string name="ma_nganh_qtkd">Mã ngành: 7340101</string>
    <string name="gt_nganh_luat">
        Trong thời kỳ toàn cầu hóa và hội nhập mạnh mẽ như hiện nay, các quan hệ kinh tế muốn diễn ra tốt đẹp không thể thiếu hệ thống pháp luật chặt chẽ. Nắm vững pháp luật là một trong những điều kiện quyết định thành công và tránh được những rủi ro dẫn đến thiệt hại kinh tế cho doanh nghiệp. \n
        Chúng tôi sẽ giúp bạn có được tư duy pháp lý của luật gia trong lĩnh vực kinh tế, dân sự có sự nghiệp vững vàng, ổn định bằng chương trình chất lượng cao và phương pháp học tập hiện đại của ngành Luật.
    </string>
    <string name="gt_nganh_dong_phuong_hoc">
        Từ lâu, các đại học châu Âu đã tập trung nghiên cứu tư tưởng và văn minh Á châu. Bạn chọn ngành Đông Phương Học là chọn tìm hiểu nguồn gốc của văn mình nhân loại.
    </string>
    <string name="gt_nganh_du_lich">
        Nếu bạn thích khám phá lịch sử những vùng đất mới, gặp gỡ làm quen với những người có văn hóa khác nhau và giúp họ hiểu biết hơn những địa chỉ văn hóa mới, thì đây là ngành học thích hợp cho tương lai của bạn.    </string>
    <string name="gt_nganh_cntt">
        Đến năm 2025, trở thành một trong những đơn vị đào tạo và nghiên cứu chuyển giao công nghệ tốt nhất trong lĩnh vực CNTT ở khu vực Duyên hải Miền trung.    </string>
    <string name="gt_nganh_ngon_ngu_anh">
        Bạn hoàn tất 129 tín chỉ để có văn bằng cử nhân Ngôn ngữ Anh. Tín chỉ trong các chương trình của Thái Bình Dương đều được công nhận liên khoa.    </string>
    <string name="gt_nganh_tc_nn">
        Khái niệm Tài chính ngân hàng  là gì? Đây là ngành học khá rộng, liên quan đến tất cả các dịch vụ giao dịch tài chính, lưu thông và vận hành tiền tệ.    </string>
    <string name="gt_nganh_ke_toan">
        Khái niệm Kế toán là gì? được hiểu là công việc ghi chép, thu nhận, xử lý và cung cấp các thông tin về tình hình hoạt động tài chính của một tổ chức, một doanh nghiệp, một cơ quan nhà nước, một cơ sở kinh doanh tư nhân…Đây là một bộ phận đóng vai trò quan trọng trong lĩnh vực quản lý kinh tế. Từ quản lý ở phạm vi từng đơn vị, cơ quan, doanh nghiệp cho đến quản lý ở phạm vi toàn bộ nền kinh tế.    </string>
    <string name="gt_nganh_qtkd">
        Quản trị kinh doanh luôn là một trong những ngành hấp dẫn các bạn trẻ năng động, đặc biệt  trong xu thế hội nhập kinh tế Quốc tế của Việt Nam những năm gần đây. Việc tìm hiểu rõ về ngành Quản trị kinh doanh giúp bạn định hướng nghề nghiệp tốt hơn trước khi quyết định chọn ngành, chọn trường theo học. Chúng ta sẽ từng bước tìm hiểu qua tất cả những thông tin cần thiết, qua đó giúp bạn có cái nhìn rõ ràng hơn về ngành học này.    </string>
    <string name="cac_chuyen_nganh_luat">
        Luật học\n
        Luật kinh tế - dân sự
    </string>
    <string name="cac_chuyen_nganh_dong_phuong_hoc">
        Trung Quốc học\n
        Hàn quốc học
    </string>
    <string name="cac_chuyen_nganh_du_lich">
        Hướng dẫn du lịch và lữ hành \n
        Quản trị khách sạn và nhà hàng \n
        Du lịch - khách sạn quốc tế
    </string>
    <string name="cac_chuyen_nganh_cntt">
        Hệ thống thông tin quản lý \n
        Mạng Máy Tính và An toàn thông tin \n
        Công nghệ phần mềm \n
        Trí tuệ nhân tạo ứng dụng
    </string>
    <string name="cac_chuyen_nganh_ngon_ngu_anh">
        Tiếng Anh giảng dạy \n
        Tiếng Anh thương mại và du lịch
    </string>
    <string name="cac_chuyen_nganh_tc_nn">
        Ngân hàng thương mại \n
        Tài chính doanh nghiệp
    </string>
    <string name="cac_chuyen_nganh_qtkd">
        Quản trị Marketing \n
        Quản trị kinh doanh tổng hợp
    </string>
    <string name="cac_chuyen_nganh_ke_toan">
        Kiểm toán - Kiểm toán \n
        Kế toán nhà hàng - khách sạn
    </string>
    <string name="co_hoi_vl_luat">
        Chuyên gia tư vấn pháp lý, phân tích, đánh giá, giải quyết các vấn đề phát sinh trong quá trình vận hành của nền kinh tế, các hoạt động kinh doanh và đảm bảo các hoạt động của tổ chức đúng chủ trương, chính sách của nhà nước và các công ước quốc tế có liên quan đến lĩnh vực kinh tế.\n
        Chuyên viên thực hiện các dịch vụ pháp lý của luật sư hoặc người hành nghề luật sư trong các tổ chức dịch vụ pháp luật.\n
        Chuyên viên tư vấn pháp luật trong các doanh nghiệp và các tổ chức kinh tế, xã hội.\n
        Chuyên viên lập pháp, hành pháp và tư pháp trong các cơ quan nhà nước các cấp.\n
        Nghiên cứu, giảng dạy về pháp luật kinh tế tại các viện nghiên cứu, cơ sở giáo dục.
    </string>
    <string name="co_hoi_vl_dong_phuong_hoc">
        Cán bộ phụ trách các mảng liên quan đến lĩnh vực lịch sử, văn hóa, xã hội, ngoại giao làm việc trong các cơ quan, ban ngành tổ chức Nhà nước \n
        Chuyên viên ngoại giao, quan hệ quốc tế tại các cơ quan, tổ chức, doanh nghiệp ở Việt Nam và khu vực \n
        Phiên dịch viên, giao dịch viên, hướng dẫn viên tại các sở ngoại vụ, cơ quan ngoại giao, công ty nước ngoài, khu du lịch,… \n
        Giảng dạy và nghiên cứu về lịch sử, văn hóa phương Đông.
    </string>
    <string name="co_hoi_vl_du_lich">
        Đó là ngành kinh tế tạo ra nhiều cơ hội việc làm với mức thu nhập hấp dẫn và ổn định cho những bạn thực sự có đam mê và chịu khó \n
        Công việc trong lĩnh vực du lịch là công việc không bao giờ nhàm chán, là công việc vừa làm vừa học, vừa rèn luyện vừa khám phá, vừa hưởng thụ và được trả công xứng đáng.
    </string>
    <string name="co_hoi_vl_cntt">
        Sinh viên ra trường có thể làm việc với các vị trí: \n
        Kỹ sư phát triển phần mềm \n
        Nhân viên IT trong các cơ quan, doanh nghiệp \n
        Tester \n
        Chuyên viên nghiên cứu phát triển các giải pháp AI, IoT \n
        Chuyên viên đảm bảo an toàn thông tin \n
        Chuyên viên đào tạo, huấn luyện CNTT \n
        Các vị trí quản lý như Quản lý dự án CNTT, trưởng phòng IT \n
        Khởi nghiệp với các dự án CNTT    </string>
    <string name="co_hoi_vl_ngon_ngu_anh">
        Biên dịch viên, phiên dịch viên trong các công ty, cơ quan ngoại giao, cơ quan truyền thông, các tổ chức kinh tế, xã hội của Việt Nam và quốc tế; dịch thuật cho các Nhà xuất bản, trung tâm phát hành sách, báo, tạp chí,… \n
        Chuyên viên truyền thông, tổ chức sự kiện, thư ký, trợ lý,… trong các công ty nước ngoài \n
        Hướng dẫn viên, chuyên viên tư vấn tại các công ty du lịch, lữ hành, nhà hàng khách sạn \n
        Giáo viên giảng dạy và nghiên cứu tiếng Anh tại các trường đại học, cao đẳng, trung cấp chuyên nghiệp, phổ thông trung học, trung tâm ngoại ngữ
    </string>
    <string name="co_hoi_vl_tc_nn">
        Chuyên viên tại các doanh nghiệp kinh doanh, công ty kiểm toán, quỹ đầu tư, công ty kinh doanh bất động sản, công ty tài chính, công ty bảo hiểm, chứng khoán… \n
        Chuyên viên tại các ngân hàng thương mại (cán bộ tín dụng, nhân viên kế toán, kế toán viên phòng thanh toán quốc tế, nhân viên kinh doanh ngoại tệ), công ty chứng khoán (nhà môi giới và kinh doanh chứng khoán), tổ chức tín dụng phi ngân hàng, cơ quan quản lý nhà nước về tài chính ngân hàng và các loại hình doanh nghiệp khác hoặc đảm đương công việc của trợ lý, tư vấn, tham vấn cho lãnh đạo doanh nghiệp, các tổ chức tài chính \n
        Giảng viên ngành Tài chính ngân hàng tại các trường đại học, cao đẳng, trung cấp
    </string>
    <string name="hello">Đang xây dựng.</string>
    <string name="tuyen_sinh">Tuyển sinh</string>
    <string name="trac_nghiem">Trắc nghiệm</string>
    <string name="event_name">Tên sự kiện</string>
    <string name="event_summary">Nội dung sự kiện</string>
    <string name="event_place">Địa điểm sự kiện</string>
    <string name="event_time">Thời gian sự kiện</string>
    <string name="event_lecturer">Diễn giả sự kiện</string>
    <string name="save">Lưu</string>
    <string name="Question_1">Câu 1: What interests you most?</string>
    <string name="answer1_a">Different cultures to my own</string>
    <string name="answer1_b">How people express themselves</string>
    <string name="answer1_c">The economy</string>
    <string name="answer1_d">How things work</string>
    <string name="email_address">Email address</string>
    <string name="logo">logo</string>
    <string name="todo">TODO</string>
    <string name="passwordEdit">Password</string>
    <string name="loginButton">Login</string>
    <string name="signUp">Create Account</string>
    <string name="loginText">Login</string>
    <string name="forgotPasswordText">Forgot Password</string>
    <string name="Daotao">Đào Tạo</string>
</resources>