<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/event_name"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/event_name"
        />
        <TextView
            android:id="@+id/event_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_summary"
            />
        <TextView
            android:id="@+id/event_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_place"
            />
        <TextView
            android:id="@+id/event_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_time"
            />
        <TextView
            android:id="@+id/event_lecturer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_lecturer"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>