<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/event_name"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_event_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/event_summary"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_event_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/event_place"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_event_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        android:hint="@string/event_time"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_event_lecturer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/event_lecturer"
        android:autofillHints="" />

    <Button
        android:id="@+id/button_event_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="save_event_click"
        android:text="@string/save" />
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>