<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanched_almond"
    android:padding="5dp"
    tools:context=".TRAC_NGHIEM">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/logo" />
        <TextView
            android:id="@+id/countLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Question_1"
            android:textSize="22sp"
            android:layout_marginTop="20dp"/>
        <ImageView
            android:id="@+id/questionImage"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:src="@drawable/quiz_interests"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo" />
        <Button
            android:id="@+id/answerBtn1"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/answer1_a"
            android:layout_marginTop="10dp"
            android:onClick="checkAnswer"/>

        <Button
            android:id="@+id/answerBtn2"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/answer1_b"
            android:layout_marginTop="6dp"
            android:onClick="checkAnswer"/>

        <Button
            android:id="@+id/answerBtn3"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/answer1_c"
            android:layout_marginTop="6dp"
            android:onClick="checkAnswer"/>

        <Button
            android:id="@+id/answerBtn4"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/answer1_d"
            android:layout_marginTop="6dp"
            android:onClick="checkAnswer"/>
    </LinearLayout>
</ScrollView>