<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/ImageBuilding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_giang_duong"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/building_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Giang_duong"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/building_direct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/hello"
            android:textColor="#000000"
            />
    </LinearLayout>
</ScrollView>