<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".TRAC_NGHIEM">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/action_bar_lg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".27"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".27"
        app:layout_constraintTop_toBottomOf="@+id/icon">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".27"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/questionImage"
                android:layout_width="wrap_content"
                android:layout_height="170dp"
                android:layout_marginTop="24dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/todo"
                android:src="@drawable/quiz_interests"/>

            <TextView
                android:id="@+id/countLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_below="@+id/questionImage"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:padding="10dp"
                android:background="@drawable/custom_textview"
                android:text="@string/Question_1"
                android:textSize="22sp"/>

            <Button
                android:id="@+id/answerBtn1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_below="@+id/countLabel"
                android:onClick="checkAnswer"
                android:background="@drawable/btn_bg"
                android:text="@string/answer1_a"/>

            <Button
                android:id="@+id/answerBtn2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_below="@+id/answerBtn1"
                android:onClick="checkAnswer"
                android:background="@drawable/btn_bg"
                android:text="@string/answer1_b"/>

            <Button
                android:id="@+id/answerBtn3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="50dp"
                android:layout_below="@+id/answerBtn2"
                android:layout_marginRight="50dp"
                android:onClick="checkAnswer"
                android:background="@drawable/btn_bg"
                android:text="@string/answer1_c" />

            <Button
                android:id="@+id/answerBtn4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="50dp"
                android:layout_below="@+id/answerBtn3"
                android:onClick="checkAnswer"
                android:background="@drawable/btn_bg"
                android:text="@string/answer1_d" />
        <!--        <Button-->
        <!--            android:id="@+id/answerBtn5"-->
        <!--            android:layout_width="300dp"-->
        <!--            android:layout_height="60dp"-->
        <!--            android:text="@string/answer1_e"-->
        <!--            android:layout_marginTop="6dp"-->
        <!--            android:onClick="checkAnswer"/>-->
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>